[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Decoration plugin for bmux — paints pane borders and publishes scene updates"
edition     = { workspace = true }
keywords    = ["bmux", "plugin", "decoration"]
license     = { workspace = true }
name        = "bmux_decoration_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_attach_layout_protocol  = { workspace = true }
bmux_decoration_plugin_api   = { workspace = true }
bmux_pane_runtime_plugin_api = { workspace = true }
bmux_plugin                  = { workspace = true }
bmux_plugin_sdk              = { workspace = true }
bmux_scene_protocol          = { workspace = true }
bmux_windows_plugin_api      = { workspace = true }
mlua                         = { workspace = true, optional = true }
serde                        = { workspace = true, features = ["derive", "std"] }
thiserror                    = { workspace = true }
tokio                        = { workspace = true, features = ["rt", "sync"] }
toml                         = { workspace = true, features = ["parse"] }
tracing                      = { workspace = true, features = ["std"] }
uuid                         = { workspace = true, features = ["serde", "std"] }

[package.metadata.cargo-machete]
# `serde` is consumed by the BPDL-generated bindings re-exported from the
# decoration-plugin-api crate; cargo-machete cannot see into proc-macro
# source.
ignored = ["serde"]

[features]
default = ["bundled-decoration-scripts", "scripting-luau"]
# Bundle the decoration plugin's sample Lua scripts via `include_str!`.
# Orthogonal to `scripting-*` — the scripts are always compiled in as
# data; whether they run depends on whether a Lua backend is enabled.
bundled-decoration-scripts = []
# Lua scripting backends. At most one may be enabled per build; mlua
# itself enforces mutual exclusion of `luajit` / `luau` / `lua54` at
# link time. Consumers that ship on platforms without a working JIT
# (e.g. Windows-MSVC, Apple Silicon when the local toolchain is
# flaky) should select `scripting-luau`.
fail-on-warnings = [
    "bmux_plugin_sdk/fail-on-warnings",
    "bmux_decoration_plugin_api/fail-on-warnings",
    "bmux_scene_protocol/fail-on-warnings",
]
scripting-lua54 = ["dep:mlua", "mlua/lua54", "mlua/vendored", "mlua/send"]
scripting-luajit = ["dep:mlua", "mlua/luajit", "mlua/vendored", "mlua/send"]
scripting-luau = ["dep:mlua", "mlua/luau", "mlua/vendored", "mlua/send"]
static-bundled = []
