[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped pane-runtime plugin for bmux (declares capabilities + typed services)"
edition     = { workspace = true }
keywords    = ["bmux", "plugin", "pane", "runtime"]
license     = { workspace = true }
name        = "bmux_pane_runtime_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_pane_runtime_plugin_api = { workspace = true }
bmux_plugin_sdk              = { workspace = true }

[features]
default          = []
fail-on-warnings = ["bmux_plugin_sdk/fail-on-warnings"]
static-bundled   = []
