[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped performance plugin for bmux (owns PerformanceCaptureSettings + rate limiter)"
edition     = { workspace = true }
keywords    = ["bmux", "plugin", "performance"]
license     = { workspace = true }
name        = "bmux_performance_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_ipc                    = { workspace = true }
bmux_pane_runtime_state     = { workspace = true }
bmux_performance_plugin_api = { workspace = true }
bmux_performance_state      = { workspace = true }
bmux_plugin                 = { workspace = true }
bmux_plugin_sdk             = { workspace = true }
serde                       = { workspace = true, features = ["derive", "std"] }
sysinfo                     = { workspace = true }

[features]
fail-on-warnings = [
    "bmux_plugin/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []
