[package]
authors     = { workspace = true }
description = "Shipped permissions plugin for bmux"
edition     = { workspace = true }
license     = { workspace = true }
name        = "bmux_permissions_plugin"
publish     = false
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_cli_output = { workspace = true }
bmux_client     = { workspace = true }
bmux_config     = { workspace = true }
bmux_ipc        = { workspace = true }
bmux_plugin     = { workspace = true }
bmux_plugin_sdk = { workspace = true }
serde           = { workspace = true, features = ["derive", "std"] }
serde_json      = { workspace = true }
tokio           = { workspace = true, features = ["rt-multi-thread", "time"] }
uuid            = { workspace = true, features = ["std"] }

[features]
fail-on-warnings = [
    "bmux_cli_output/fail-on-warnings",
    "bmux_client/fail-on-warnings",
    "bmux_config/fail-on-warnings",
    "bmux_ipc/fail-on-warnings",
    "bmux_plugin/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []
