[package]
authors     = { workspace = true }
description = "Shipped plugin CLI plugin for bmux"
edition     = { workspace = true }
license     = { workspace = true }
name        = "bmux_plugin_cli_plugin"
publish     = false
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_plugin = { workspace = true }
serde       = { workspace = true, features = ["derive", "std"] }
serde_json  = { workspace = true }

[features]
fail-on-warnings = []
