[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped plugin CLI plugin for bmux"
edition     = { workspace = true }
keywords    = ["bmux", "cli", "plugin"]
license     = { workspace = true }
name        = "bmux_plugin_cli_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_plugin     = { workspace = true }
bmux_plugin_sdk = { workspace = true }
libc            = { workspace = true }
serde           = { workspace = true, features = ["derive", "std"] }
serde_json      = { workspace = true }
tracing         = { workspace = true }

[features]
fail-on-warnings = [
    "bmux_plugin/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []
