[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped prompted-actions plugin for bmux — config-driven prompted action sequences"
edition     = { workspace = true }
keywords    = ["bmux", "prompt", "plugin"]
license     = { workspace = true }
name        = "bmux_prompted_actions_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_plugin     = { workspace = true }
bmux_plugin_sdk = { workspace = true }
serde           = { workspace = true, features = ["derive", "std"] }
tokio           = { workspace = true }
toml            = { workspace = true, features = ["parse"] }
tracing         = { workspace = true }

[features]
fail-on-warnings = ["bmux_plugin_sdk/fail-on-warnings"]
static-bundled   = []
