[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped sessions plugin for bmux"
edition     = { workspace = true }
keywords    = ["bmux", "plugin", "sessions"]
license     = { workspace = true }
name        = "bmux_sessions_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_ipc                 = { workspace = true }
bmux_plugin              = { workspace = true }
bmux_plugin_sdk          = { workspace = true }
bmux_sessions_plugin_api = { workspace = true }
serde                    = { workspace = true, features = ["derive", "std"] }
uuid                     = { workspace = true, features = ["serde", "std"] }

[features]
fail-on-warnings = [
    "bmux_plugin/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []
