[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped theme plugin for bmux runtime theme selection"
edition     = { workspace = true }
keywords    = ["bmux", "theme", "plugin"]
license     = { workspace = true }
name        = "bmux_theme_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_appearance = { workspace = true }
bmux_ipc        = { workspace = true }
bmux_plugin     = { workspace = true }
bmux_plugin_sdk = { workspace = true }
serde           = { workspace = true, features = ["derive", "std"] }
tokio           = { workspace = true }
toml            = { workspace = true, features = ["parse"] }
tracing         = { workspace = true }

[features]
fail-on-warnings = [
    "bmux_appearance/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []
