[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped windows plugin for bmux"
edition     = { workspace = true }
keywords    = ["bmux", "plugin", "windows"]
license     = { workspace = true }
name        = "bmux_windows_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_clients_plugin_api = { workspace = true }
bmux_ipc                = { workspace = true }
bmux_plugin             = { workspace = true }
bmux_plugin_sdk         = { workspace = true }
bmux_windows_plugin_api = { workspace = true }
serde                   = { workspace = true, features = ["derive", "std"] }
serde_json              = { workspace = true }
uuid                    = { workspace = true, features = ["std"] }

[dev-dependencies]
bmux_contexts_plugin_api = { workspace = true }

[features]
fail-on-warnings = [
    "bmux_ipc/fail-on-warnings",
    "bmux_plugin/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []
